test/error/TypeIntPtr.ci
public class Test
{
	public static bool Run()
	{
		int! p; //ERROR: Unexpected '!' on a non-reference type
		return true;
	}
}
